[package]
name = "fuzz-sbat"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sbat = { path = "../sbat", features = ["std"] }

# Prevent the fuzz package from interfering with the main workspace.
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "combo"
path = "fuzz_targets/combo.rs"
test = false
doc = false
