[package]
name = "fuzz-sbat"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sbat = { path = "../sbat", features = ["std"] }

[[bin]]
name = "combo"
path = "fuzz_targets/combo.rs"
test = false
doc = false
bench = false
