# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "sbat-tool"
version = "0.1.0"
edition = "2021"

categories = ["command-line-utilities"]
description = "UEFI Secure Boot Advanced Targeting (SBAT) command-line tool"
keywords = ["sbat", "uefi", "cli"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/google/sbat-rs"

[dependencies]
anyhow = "1.0.70"
ascii = { version = "1.1.0", default-features = false }
clap = { version = "4.2.1", features = ["derive"] }
fs-err = "2.9.0"
object = { version = "0.30.3", default-features = false, features = ["pe", "read", "std"] }
sbat = { version = "0.1.0", path = "../sbat", features = ["alloc"] }
tabled = { version = "0.11.1", default-features = false, features = ["std"] }
