# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "sbat-tool"
categories = ["command-line-utilities"]
description = "UEFI Secure Boot Advanced Targeting (SBAT) command-line tool"
keywords = ["sbat", "uefi", "cli"]

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.70"
ascii = { version = "1.1.0", default-features = false }
clap = { version = "4.2.1", features = ["derive"] }
fs-err = "2.9.0"
object = { version = "0.30.3", default-features = false, features = ["pe", "read", "std"] }
sbat = { version = "0.3.0", path = "../sbat", features = ["alloc"] }
tabled = { version = "0.11.1", default-features = false, features = ["std"] }
