# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "sbat-tool"
categories = ["command-line-utilities"]
description = "UEFI Secure Boot Advanced Targeting (SBAT) command-line tool"
keywords = ["sbat", "uefi", "cli"]

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.72"
ascii = { version = "1.1.0", default-features = false }
clap = { version = "4.3.19", features = ["derive"] }
fs-err = "2.9.0"
itertools = "0.11.0"
object = { version = "0.32.0", default-features = false, features = ["pe", "read", "std"] }
sbat = { version = "0.5.0", path = "../sbat", features = ["std"] }
tabled = { version = "0.13.0", default-features = false, features = ["std"] }
