# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "sbat"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = { version = "0.7.0", default-features = false }
ascii = { version = "1.0.0", default-features = false }
log = { version = "0.4.0", default-features = false }

[features]
alloc = []
