# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "sbat"
version = "0.2.0"
edition = "2021"

categories = ["data-structures", "embedded", "no-std"]
description = "UEFI Secure Boot Advanced Targeting (SBAT) no_std library"
keywords = ["sbat", "uefi", "no_std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/google/sbat-rs"

[dependencies]
arrayvec = { version = "0.7.0", default-features = false }
ascii = { version = "1.0.0", default-features = false }
log = { version = "0.4.0", default-features = false }

[features]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
